--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-estate",
+  "name": "LeRestaurante",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
